--- a/aventura2/Makefile
+++ b/aventura2/Makefile
@@ -1,9 +1,9 @@
 # Adelaida
 CC=gcc
 CFLAGS=-c -g -Wall -std=c99
-LDFLAGS=-lreadline -Incurses #activar si se usa readline
+#LDFLAGS=-lreadline -Incurses #activar si se usa readline
  
-SOURCES=nivelA.c nivelB.c nivelC.c contar.c nivelD.c my_shell.c
+SOURCES=nivelA.c nivelB.c nivelC.c contar.c nivelD.c my_shell.c 
 LIBRARIES= #.o
 INCLUDES= #.h
 PROGRAMS=nivelA nivelB nivelC contar nivelD my_shell
@@ -28,7 +28,7 @@ nivelD: nivelD.o
  
 my_shell: my_shell.o
 	$(CC) $@.o -o $@ $(LDFLAGS) $(LIBRARIES)
- 
+
 %.o: %.c $(INCLUDES)
 	$(CC) $(CFLAGS) -o $@ -c $<
  
